--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: ll20120928
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Family site.
+  家庭日记。
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
